environments/local/resources/ingress/test-site-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-site-ingress
  namespace: local
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - test.tentonpenguin.co.uk
    secretName: test-site-tls
  rules:
  - host: test.tentonpenguin.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: test-site-service
          servicePort: 80
